# tock

./: Cargo.toml
boards/ast2700_bmcu/: Cargo.toml  Makefile  README.md  layout.ld
boards/ast2700_bmcu/src/: main.rs
chips/ast2700/: Cargo.toml  README.md
chips/ast2700/src/: chip.rs  lib.rs  timer.rs  uart.rs
