# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2024.

[package]
name = "ast2700_bmcu"
version.workspace = true
authors.workspace = true
build = "../build.rs"
edition.workspace = true

[dependencies]
components = { path = "../components" }
rv32i = { path = "../../arch/rv32i" }
kernel = { path = "../../kernel", features = ["debug_load_processes"] }
ast2700 = { path = "../../chips/ast2700" }

capsules-core = { path = "../../capsules/core" }
capsules-extra = { path = "../../capsules/extra" }
capsules-system = { path = "../../capsules/system" }

[build-dependencies]
tock_build_scripts = { path = "../build_scripts" }

[lints]
workspace = true
